--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "antd": "^5.6.1",
     "loader-utils": "3.2.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
