--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "main": "src/index.js",
   "dependencies": {
     "antd": "^5.6.1",
+    "axios": "^1.4.0",
+    "googleapis": "^39.2.0",
     "loader-utils": "3.2.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
